--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -8,8 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-
-    <title>IMSS Bienestar</title>
+    <link rel="shortcut icon" href="{% static 'base/img/favicon.ico' %}" type="image/x-icon">
+    <title>{% block title %}IMSS Bienestar{% endblock %}</title>
 
 <!-- Fuentes personalizadas para esta plantilla -->
 <link href="{% static 'base/css/all.css' %}" rel="stylesheet" type="text/css">
