--- a/login_app/templates/login_app/login.html
+++ b/login_app/templates/login_app/login.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+{% load static %}
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="shortcut icon" href="{% static 'base/img/favicon.ico' %}" type="image/x-icon">
   <title>{% block title %}Iniciar Sesión{% endblock %}</title>
 
-  {% load static %}
   <!-- Bootstrap CSS CDN -->
   <link
     rel="stylesheet"
