--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -39,25 +39,35 @@
                 </div>
                 <div class="sidebar-brand-text mx-3">IMSS Bienestar</div>
             </a>
-
+            
+            {% if usuario_actual %}
+            <!-- Fuenciones de administrador -->
+            {% if is_superadmin %}
             <!-- Divisor -->
-            <hr class="sidebar-divider my-0">
-
-            <!-- Elemento de navegación - Panel de control se debe de cambiar ejmplo para uno -->
-            <!-- Inicio -->
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'index' %}">
-                    <i class="fas fa-home"></i>
-                    <span>Inicio</span>
-                </a>
-            </li>            
-
-            <!-- Divisor ejemplo-->
             <hr class="sidebar-divider">
 
             <!-- Título ejemplo-->
             <div class="sidebar-heading">
-                Interface
+                Usuario
+            </div>
+
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'usuarios:listar_usuarios' %}">
+                    <i class="fas fa-users"></i>
+                    <span>Usuarios</span>
+                </a>
+            </li>
+            {% endif %}
+
+            <!-- Funciones de Encargado de almacen -->
+            {% if is_almacen_admin %}
+
+            <!-- Divisor -->
+            <hr class="sidebar-divider">
+
+            <!-- Título ejemplo-->
+            <div class="sidebar-heading">
+                Encargado de almacén
             </div>
 
             <!-- Elemento de navegación - Contraer menú de páginas ejemplo para mas para selecionar -->
@@ -76,7 +86,71 @@
                 </div>
             </li>
 
-            <!-- Debes de agregar mas elememntos de na vegacion aqui usando de ejemplo los de arriba -->
+            <!-- Agregar mas Funciones -->
+
+            {% endif %}
+
+            <!-- Funciones para el supervisor de almacen -->
+            {% if is_supervisor %}
+
+            <!-- Divisor -->
+            <hr class="sidebar-divider">
+
+            <!-- Título ejemplo-->
+            <div class="sidebar-heading">
+                Supervisor de almacén
+            </div>
+
+            <!-- Elemento de navegación - Contraer menú de páginas ejemplo para mas para selecionar -->
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"
+                    aria-expanded="true" aria-controls="collapseTwo">
+                    <i class="fas fa-fw fa-cog"></i>
+                    <span>Components</span>
+                </a>
+                <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
+                    <div class="bg-white py-2 collapse-inner rounded">
+                        <h6 class="collapse-header">Custom Components:</h6>
+                        <a class="collapse-item" href="buttons.html">Buttons</a>
+                        <a class="collapse-item" href="cards.html">Cards</a>
+                    </div>
+                </div>
+            </li>
+
+            <!-- Agregar mas Funciones -->
+
+            {% endif %}
+
+            <!-- Funciones para el Salida de almacén -->
+            {% if can_salida %}
+
+            <!-- Divisor -->
+            <hr class="sidebar-divider">
+
+            <!-- Título ejemplo-->
+            <div class="sidebar-heading">
+                Salida de almacén
+            </div>
+
+            <!-- Elemento de navegación - Contraer menú de páginas ejemplo para mas para selecionar -->
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"
+                    aria-expanded="true" aria-controls="collapseTwo">
+                    <i class="fas fa-fw fa-cog"></i>
+                    <span>Components</span>
+                </a>
+                <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
+                    <div class="bg-white py-2 collapse-inner rounded">
+                        <h6 class="collapse-header">Custom Components:</h6>
+                        <a class="collapse-item" href="buttons.html">Buttons</a>
+                        <a class="collapse-item" href="cards.html">Cards</a>
+                    </div>
+                </div>
+            </li>
+
+            <!-- Agregar mas Funciones -->
+
+            {% endif %}
 
             <!-- Divisor -->
             <hr class="sidebar-divider d-none d-md-block">
@@ -87,6 +161,7 @@
             </div>
 
         </ul>
+        {% endif %}
         <!-- Fin de la barra lateral -->
 
         <!-- Envoltorio de contenido -->
@@ -206,6 +281,9 @@
 
 <!-- Scripts personalizados -->
 <script src="{% static 'base/js/personalizado.js' %}"></script>
+
+<!-- aquí inyectarás scripts de cada vista -->
+{% block extra_js %}{% endblock extra_js %}
 
 <!-- Scripts para Expirar Sesión -->
 <script>
