cambio de color en la barra superir de navegación

--- a/base/static/base/css/sb-admin-2.css
+++ b/base/static/base/css/sb-admin-2.css
@@ -6491,7 +6491,7 @@ button.bg-dark:focus {
 }
 
 .bg-white {
-  background-color: #d7d7d700 !important;
+  background-color: #006657 !important;
 }
 
 .bg-transparent {
