feat(usuarios): implementación de vista para editar usuarios
Se agregó la funcionalidad para ver y editar usuarios, incluyendo:
- Edición de datos personales, rol y estado.
- Cambio de contraseña con validación.
- Regeneración del nombre de usuario si cambian nombres o apellido paterno.
- Restricciones especiales para cuentas de tipo "Invitado".
- Registro de acciones en el log del sistema.

--- a/usuarios/templates/usuarios/crear_usuario.html
+++ b/usuarios/templates/usuarios/crear_usuario.html
@@ -89,9 +89,10 @@
         </div>
     </div>
 
-    <button type="submit" class="btn btn-primary mt-3">Guardar</button>
-    
-    <a href="{% url 'usuarios:listar_usuarios' %}" class="btn btn-success mt-3"> Lista de Usuarios </a>
+    <div class="d-flex justify-content-between mt-4">
+    <a href="{% url 'usuarios:listar_usuarios' %}" class="btn btn-outline-secondary">Regresar a la lista</a>    
+    <button type="submit" class="btn btn-success">Guardar</button>
+    </div>
     </form>
 </div>
 {% endblock %}
