--- a/base/static/base/css/sb-admin-2.css
+++ b/base/static/base/css/sb-admin-2.css
@@ -10016,7 +10016,7 @@ a:focus {
 }
 
 .text-gray-600 {
-  color: #000000c2 !important;
+  color: #ffffff !important;
 }
 
 .text-gray-700 {
@@ -10388,7 +10388,7 @@ a:focus {
   padding: 0.5rem 1rem;
   margin: 0 0.5rem;
   display: block;
-  color: #000000;
+  color: #ffffff;
   text-decoration: none;
   border-radius: 0.35rem;
   white-space: nowrap;
@@ -10396,7 +10396,7 @@ a:focus {
 
 .sidebar .nav-item .collapse .collapse-inner .collapse-item:hover,
 .sidebar .nav-item .collapsing .collapse-inner .collapse-item:hover {
-  background-color: #eaecf4;
+  background-color: #235B4E;
 }
 
 .sidebar .nav-item .collapse .collapse-inner .collapse-item:active,
