--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -65,23 +65,23 @@
             <!-- Divisor -->
             <hr class="sidebar-divider">
 
-            <!-- Título ejemplo-->
+            <!-- Título del grupo -->
             <div class="sidebar-heading">
-                Encargado de almacén
+                Auxiliares
             </div>
 
-            <!-- Elemento de navegación - Contraer menú de páginas ejemplo para mas para selecionar -->
+            <!-- Grupo desplegable: Solicitudes -->
             <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"
-                    aria-expanded="true" aria-controls="collapseTwo">
-                    <i class="fas fa-fw fa-cog"></i>
-                    <span>Components</span>
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseSolicitantes"
+                    aria-expanded="false" aria-controls="collapseSolicitantes">
+                    <i class="fas fa-fw fa-users"></i>
+                    <span>Solicitantes</span>
                 </a>
-                <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
+                <div id="collapseSolicitantes" class="collapse" aria-labelledby="headingSolicitantes" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Custom Components:</h6>
-                        <a class="collapse-item" href="buttons.html">Buttons</a>
-                        <a class="collapse-item" href="cards.html">Cards</a>
+                        <h6 class="collapse-header">Elementos:</h6>
+                        <a class="collapse-item" href="{% url 'departamentos_lista' %}">Departamentos</a>
+
                     </div>
                 </div>
             </li>
@@ -192,12 +192,6 @@
                                     style="max-height:40px; width:auto;"
                                 >
                             </a>
-                            <!-- <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">{{ user_full_name|default:"Invitado" }}</span>
-                                <img class="img-profile rounded-circle"
-                                    src="{% static 'base/img/undraw_profile.svg' %}">
-                            </a> -->
                             <!-- Menú desplegable - Información del usuario -->
                             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
                                 aria-labelledby="userDropdown">
