--- a/solicitantes/templates/solicitantes/modales/modal_agregar_departamento.html
+++ b/solicitantes/templates/solicitantes/modales/modal_agregar_departamento.html
@@ -1,32 +1,45 @@
 <div class="modal-header">
-  <h5 class="modal-title">Agregar Departamento</h5>
-  <button type="button" class="close" data-dismiss="modal">&times;</button>
+    <h5 class="modal-title">Agregar Departamento</h5>
+    <button type="button" class="close" data-dismiss="modal" aria-label="Cerrar">
+        <span aria-hidden="true">&times;</span>
+    </button>
 </div>
 
-<div class="modal-body" id="modal-body-form">
-  {% include 'solicitantes/modales/fragmento_form_departamento.html' %}
+<div class="modal-body">
+  <form id="form-departamento"
+        method="post"
+        action="{% url 'departamentos_agregar' %}">
+    <div id="departamento-form-fields">
+      {% include 'solicitantes/modales/fragmento_form_departamento.html' %}
+    </div>
+    <div class="text-right mt-3">
+      <button type="submit" class="btn btn-primary">Guardar</button>
+    </div>
+  </form>
 </div>
-
 <script>
   function bindFormDepartamento() {
-    $('#form-departamento').on('submit', function(e) {
+    $('#form-departamento').off('submit').on('submit', function(e) {
       e.preventDefault();
+      const form = $(this);
       $.ajax({
         type: 'POST',
-        url: "{% url 'departamentos_agregar' %}",
-        data: $(this).serialize(),
+        url: form.attr('action'),
+        data: form.serialize(),
         success: function(response) {
           if (response.success) {
             $('#modal').modal('hide');
-            location.reload();
+            window.location = response.redirect_url;
           } else {
-            $('#modal-body-form').html(response.html_form);
-            bindFormDepartamento(); // volver a vincular el evento
+            $('#departamento-form-fields').html(response.html_form);
+            bindFormDepartamento();
           }
+        },
+        error: function() {
+          alert('Error de red. Intenta de nuevo.');
         }
       });
     });
   }
-
   bindFormDepartamento();
 </script>
