--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -56,7 +56,7 @@
 
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'usuarios:listar_usuarios' %}">
-                    <i class="fas fa-users"></i>
+                    <i class="fas fa-fw fa-id-card-alt"></i>
                     <span>Usuarios</span>
                 </a>
             </li>
@@ -77,7 +77,7 @@
             <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseSolicitantes"
                     aria-expanded="false" aria-controls="collapseSolicitantes">
-                    <i class="fas fa-fw fa-users"></i>
+                    <i class="fas fa-fw fa-address-book"></i>
                     <span>Solicitantes</span>
                 </a>
                 <div id="collapseSolicitantes" class="collapse" aria-labelledby="headingSolicitantes" data-parent="#accordionSidebar">
