refactor: renombrar “Herencia” a “Tipo” en módulo de inventario

--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -130,7 +130,7 @@
             <div id="collapseInventario" class="collapse" aria-labelledby="headingInventario" data-parent="#accordionSidebar">
                 <div class="bg-white py-2 collapse-inner rounded">
                 <h6 class="collapse-header">Módulos Inventario:</h6>
-                <a class="collapse-item" href="{% url 'inventario:lista_herencias' %}">Herencias</a>
+                <a class="collapse-item" href="{% url 'inventario:lista_tipos' %}">Tipos</a>
                 <a class="collapse-item" href="{% url 'inventario:lista_productos' %}">Productos</a>
                 </div>
             </div>
