--- a/inventario/templates/inventario/modales/fragmento_form_producto.html
+++ b/inventario/templates/inventario/modales/fragmento_form_producto.html
@@ -1,10 +1,10 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-6 mb-3">
-        <label for="{{ form.herencia.id_for_label }}" class="form-label">Herencia</label>
-        {{ form.herencia }}
-        {% if form.herencia.errors %}
-            <div class="text-danger small">{{ form.herencia.errors.0 }}</div>
+        <label for="{{ form.tipo.id_for_label }}" class="form-label">Tipo</label>
+        {{ form.tipo }}
+        {% if form.tipo.errors %}
+            <div class="text-danger small">{{ form.tipo.errors.0 }}</div>
         {% endif %}
         </div>
 
