--- a/inventario/templates/inventario/modales/fragmento_form_producto.html
+++ b/inventario/templates/inventario/modales/fragmento_form_producto.html
@@ -63,6 +63,16 @@
             <div class="text-danger small">{{ form.costo_unitario.errors.0 }}</div>
         {% endif %}
         </div>
+
+        {% if not form.estado.is_hidden %}
+        <div class="col-md-6 mb-3">
+            <label for="{{ form.estado.id_for_label }}" class="form-label">Estado</label>
+            {{ form.estado }}
+            {% if form.estado.errors %}
+            <div class="text-danger small">{{ form.estado.errors.0 }}</div>
+            {% endif %}
+        </div>
+        {% endif %}
     </div>
 
     <div class="row">
@@ -83,3 +93,7 @@
         </div>
     </div>
 </div>
+
+{% for hidden in form.hidden_fields %}
+    {{ hidden }}
+{% endfor %}
