--- a/inventario/templates/inventario/modales/modal_editar_producto.html
+++ b/inventario/templates/inventario/modales/modal_editar_producto.html
@@ -11,6 +11,9 @@
         {% csrf_token %}
         <div id="producto-form-fields">
             {% include 'inventario/modales/fragmento_form_producto.html' %}
+            {% for hidden in form.hidden_fields %}
+                {{ hidden }}
+            {% endfor %}
         </div>
         <div class="text-right mt-3">
             <button type="submit" class="btn btn-primary">Guardar</button>
